# semantickernelsample

./: .gitignore  aiagent_bingsearch.py  app_azurefunc_mcp_github.py  area_codes.json  autogen_conversable_agent.py  chat_completion_agent_as_function.py  consoleapp-o3mini.py  consoleapp.py  consoleapp_chatagent.py  consoleapp_chatagent_mcp.py  consoleapp_chatagent_mcpstdio.py  consoleapp_chatagent_ollama.py  consoleapp_groupchat.py  consoleapp_multiagent-plugin.py  consoleapp_multiagent-plugin2.py  consoleapp_multiagent.py  consoleapp_nonAIAgentGroupchat.py  mcp_proxy.py  phi4.rest  plugin.py  pyproject.toml  request.rest  simplemcp_client.py  webapp_chat.py
templates/: http_stream_chat.html  websocket_chat.html
