[project]
name = "semantickernel202503"
version = "0.1.0"
description = ""
authors = [
    {name = "Yoichiro.Abe",email = "yoichiro.abe@avanade.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "semantic-kernel[ollama] (>=1.28.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "azure-ai-projects (>=1.0.0b7,<2.0.0)",
    "mcp (>=1.6.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "fastmcp (>=2.2.1,<3.0.0)",
    "ruff (>=0.11.6,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
